# OSPSD-SP24-JOLTEON-TEMPLATE

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: c---bug-report.md
libjolteon/libjolteon/: CMakeLists.txt  component.cpp  component.hpp  main.cpp
libjolteon/tests/: CMakeLists.txt  test_components.cpp
